# polymorphism_impl

./: BasicShapes.cpp  BasicShapes.hpp  CMakeLists.txt  README.md  ShapeVariant_old.hpp  ShapesPolymorphism.cpp  ShapesPolymorphism.hpp  ShapesUnion.cpp  ShapesUnion.hpp  ShapesVariant.cpp  ShapesVariant.hpp  ShapesVirtual.cpp  ShapesVirtual.hpp  main_polymorphism.cpp  main_union.cpp  main_variant.cpp  main_virtual.cpp
include/: ShapesMaker.hpp  ShapesUnion.hpp  ShapesVariant.hpp  ShapesVirtual.hpp
src/: BasicShapes.cpp  ShapesUnion.cpp  ShapesVariant.cpp  ShapesVirtual.cpp  main_union.cpp  main_variant.cpp  main_virtual.cpp
test/: CMakeLists.txt  TestBasicShapes.cpp  TestShapesVariant.cpp  main.cpp
